--- a/package.json
+++ b/package.json
@@ -6,5 +6,23 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0"
-  }
+  },
+  "scripts": {
+    "start": "node server.js"
+  },
+  "name": "dbms_backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NazimFilzer/dbms_backend.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/NazimFilzer/dbms_backend/issues"
+  },
+  "homepage": "https://github.com/NazimFilzer/dbms_backend#readme",
+  "description": ""
 }
