--- a/package.json
+++ b/package.json
@@ -1,12 +1,4 @@
 {
-  "dependencies": {
-    "bcryptjs": "^2.4.3",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.0.0"
-  },
   "scripts": {
     "start": "node server.js"
   },
@@ -24,5 +16,13 @@
     "url": "https://github.com/NazimFilzer/dbms_backend/issues"
   },
   "homepage": "https://github.com/NazimFilzer/dbms_backend#readme",
-  "description": ""
+  "description": "",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.0.0"
+  }
 }
