--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
+  "name": "dbms_backend",
+  "version": "1.0.0",
+  "description": "",
+  "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "name": "dbms_backend",
-  "version": "1.0.0",
-  "main": "server.js",
-  "devDependencies": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/NazimFilzer/dbms_backend.git"
@@ -16,7 +16,6 @@
     "url": "https://github.com/NazimFilzer/dbms_backend/issues"
   },
   "homepage": "https://github.com/NazimFilzer/dbms_backend#readme",
-  "description": "",
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
@@ -24,5 +23,6 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.0"
-  }
+  },
+  "devDependencies": {}
 }
