--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "16.x"
+  },
   "bugs": {
     "url": "https://github.com/NazimFilzer/dbms_backend/issues"
   },
